# EvoDis

./: .gitignore  CMakeLists.txt  log.conf.template  readme.md  test.sh
evo_dis/: Cargo.toml  readme.md
evo_dis/src/: dispersal.rs  foodweb.rs  lib.rs  main.rs  position.rs  settings.rs  speciation.rs  species.rs  survival.rs
old/: SpookyV2.h  binaryrw.h  controller.cpp  controller.h  eval.cpp  eval.h  foodweb.cpp  foodweb.h  main.cpp  output.cpp  output.h  species.cpp  species.h
src/: base_settings.h  easylogging++.cc  eval.cpp  eval.h  exception.cpp  exception.h  foodweb.cpp  foodweb.h  foodweb_cache.cpp  foodweb_cache.h  main.cpp  output.cpp  output.h  simulation.cpp  simulation.h  simulation_settings.h  species.cpp  species.h
