[package]
name = "evo_dis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
